--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,61 @@ li {
  list-style: none;
 }
 
+
+/*RESPONSIVE NAVBAR MENU STARTS*/
+/* CHECKBOX HACK */
+input[type=checkbox]{
+ display: none;
+} 
+/*HAMBURGER MENU*/
+.hamburger {
+ display: none;
+ font-size: 24px;
+ user-select: none;
+}
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+.menu {     content-visibility: hidden;
+ position: absolute;
+ background-color:#00121b;
+ right: 0;
+ left: 0;
+ text-align: center;
+ padding: 16px 0;
+}
+.menu li:hover {
+ display: inline-block;
+ transition: 0.3s ease;
+}
+.menu li + li {
+ margin-top: 12px;
+}
+input[type=checkbox]:checked ~ .menu{
+ display: block;
+ 
+ content-visibility: visible;
+}
+.hamburger {
+ display: block;
+}
+.dropdown {
+ left: 50%;
+ top: 30px;
+ transform: translateX(35%);
+}
+.dropdown li:hover {
+ background-color: #4c9e9e;
+}
+}
+
+/* end  */
 /* NAVBAR STYLING STARTS */
 .navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px;
- background-color: #F9A826;
+ background-color: #00121b;
  color: #fff;
 }
 .nav-links a {
@@ -39,7 +87,7 @@ li {
 }
 
 .menu li:hover {
- background-color: #fbba52;
+ /* background-color: #fbba52; */
  border-radius: 5px;
  transition: 0.3s ease;
 }
@@ -47,7 +95,7 @@ li {
 .menu li {
  padding: 5px 14px;
 }
-/* DROPDOWN MENU */
+
 .services {
  position: relative; 
 }
@@ -366,9 +414,7 @@ div.profile-details > div > ul > li > div:nth-child(2) {
 }
 
 @media (max-width: 800px) {
-  body {
-    background: red;
-  }
+ 
 
   .profile-wrapper {
     flex-direction: column;
