--- a/css/style.css
+++ b/css/style.css
@@ -1,573 +1,670 @@
 /* UTILITIES */
 /* #F9A826 */
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
-}
-body {
- font-family: cursive;
-}
-a {
- text-decoration: none;
-}
-li {
- list-style: none;
-}
-
-
-/*RESPONSIVE NAVBAR MENU STARTS*/
-/* CHECKBOX HACK */
-input[type=checkbox]{
- display: none;
-} 
-/*HAMBURGER MENU*/
-.hamburger {
- display: none;
- font-size: 24px;
- user-select: none;
-}
-/* APPLYING MEDIA QUERIES */
-@media (max-width: 768px) {
-.menu {     content-visibility: hidden;
- position: absolute;
- background-color:#00121b;
- right: 0;
- left: 0;
- text-align: center;
- padding: 16px 0;
-}
-.menu li:hover {
- display: inline-block;
- transition: 0.3s ease;
-}
-.menu li + li {
- margin-top: 12px;
-}
-input[type=checkbox]:checked ~ .menu{
- display: block;
- 
- content-visibility: visible;
-}
-.hamburger {
- display: block;
-}
-.dropdown {
- left: 50%;
- top: 30px;
- transform: translateX(35%);
-}
-.dropdown li:hover {
- background-color: #4c9e9e;
-}
-}
-
-/* end  */
-/* NAVBAR STYLING STARTS */
-.navbar {
- display: flex;
- align-items: center;
- justify-content: space-between;
- padding: 20px;
- background-color: #00121b;
- color: #fff;
-}
-.nav-links a {
- color: #fff;
-}
-/* LOGO */
-.logo {
- font-size: 32px;
-}
-/* NAVBAR MENU */
-.menu {
- display: flex;
- gap: 1em;
- font-size: 18px;
-}
-
-.menu li:hover {
- /* background-color: #fbba52; */
- border-radius: 5px;
- transition: 0.3s ease;
-}
-
-.menu li {
- padding: 5px 14px;
-}
-
-.services {
- position: relative; 
-}
-.dropdown {
- background-color: rgb(1, 139, 139);
- padding: 1em 0;
- position: absolute; /*WITH RESPECT TO PARENT*/
- display: none;
- border-radius: 8px;
- top: 35px;
-}
-.dropdown li + li {
- margin-top: 10px;
-}
-.dropdown li {
- padding: 0.5em 1em;
- width: 8em;
- text-align: center;
-}
-.dropdown li:hover {
- background-color: #4c9e9e;
-}
-.services:hover .dropdown {
- display: block;
-}
-
-/* sec1 */
-.mtimage{
-  width:500px;
-  height:500px;
-  object-fit: contain;
-
-}
-.col-7{
-  
-  align-self: center;
-
-}
-/* end sec1 */
-
-/* sec2 */
-
-.container {
-  width: 100%;
-  height: 100%;
-  padding: 0px 8%;
-}
-
-.container h1 {
-  text-align: center;
-  padding-top: 10%;
-  margin-bottom: 60px;
-  font-weight: 600;
-  position: relative;
-}
-
-.container h1::after {
-  content: '';
-  background: #f9a826;
-  width: 100px;
-  height: 5px;
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.row {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 30px;
-}
-
-.service {
-  text-align: center;
-  padding: 25px 10px;
-  border-radius: 5px;
-  font-size: 14px;
-  cursor: pointer;
-  background: transparent;
-  transition: transform 0.5s, background 0.5s;
-}
-
-.service img {
-  font-size: 40px;
-  width:100px;
-  height:100px;
-  margin-bottom: 10px;
-  color: #303ef7;
-}
-
-.service h2 {
-  font-weight: 600;
-  margin-bottom: 8px;
-}
-
-.service:hover {
-  background: #f9c26a;
-  color: #fff;
-  transform: scale(1.05);
-}
-
-.service:hover img {
-  color: #fff;
-}
-/* end sec2 */
-
-
-/* sec3 */
-
-.about-section{
-  background: #f1f1f1;
-}
-
-.inner-width{
-  max-width: 1000px;
-  overflow: hidden;
-  padding: 0 20px;
-  /*margin: auto;*/
-}
-
-.about-section h1{
-  text-align: center;
-}
-
-.border{
-  width: 100px;
-  height: 3px;
-  background: #e74c3c;
-  margin: 40px auto;
-}
-
-.about-section-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.about-section-col {
-  flex: 50%;
-}
-
-.about{
-padding-right: 30px;
-}
-
-.about p {
-  text-align: justify;
-  padding-bottom: 20px;
-}
-
-.about a{
-  display: inline-block;
-  color: #e72c3c;
-  text-decoration: none;
-  border: 2px solid #e72c3c;
-  border-radius: 24px;
-  padding: 8px 40px;
-  transition: 0.4s linear;
-}
-
-.about a:hover {
-  color: #fff;
-  background: #e72c3c;
-}
-
-.skills{
-  padding-left: 30px;
-}
-
-.skill{
-  margin-bottom: 10px;
-}
-
-.progress{
-  width: 100%;
-  background: #ddd;
-  border-radius: 12px;
-}
-
-.progress-bar {
-  height: 12px;
-  background: #f9a826;
-  border-radius: 12px;
-}
-
-.progress-bar span{
-  float: right;
-  margin-right: 6px;
-  line-height: 13px;
-  color: #fff;
-  font-size: 12px;
-}
-
-.p1{
- width: 80%;
-}
-
-.p2{
- width: 60%;
-}
-
-.p3{
-  width: 30%;
-}
-
-@media screen and (max-width: 700px){
-  .about-section-col{
-    flex: 100%;
-    margin: 10px 0;
-  }
-  .about, .skills {
-    padding: 0;
-  }
-  .about{
-    text-align: center;
-  }
-}
-/* end sec3 */
-
-
-/* sec4 */
-
-.profile-picture,
-.profile-details {
-  flex: 1;
-  font-size: 16px;
-  font-size: 2.5vw;
-
-}
-.profile-picture{
-  
-  text-align-last: center;
-}
-.profile-wrapper {
-  color: white;
-  display: flex;
-}
-
-img#profile-picture {
- 
-  width: 300px;
-    height: 187px;
-
-  object-fit: contain;
-}
-
-div.profile-details > div {
-  padding: 0em 1em 1em 1em;
-  
-  background: #F9A826;
-}
-
-div.profile-details > div > ul {
-  list-style: none;
-  padding: 0;
   margin: 0;
-}
-
-div.profile-details > div > ul li {
-  margin: 8px 0;
-  display: block;
-}
-
-div.profile-details > div > ul > li > div:nth-child(1) {
-  font-weight: 600;
-  font-size: 16px;
-  font-size: 2vw;
-  width: 30%;
-  display: inline-block;
-}
-
-div.profile-details > div > ul > li > div:nth-child(2) {
-  font-size: 16px;
-  font-size: 2vw;
-  text-align: left;
-  width: 68%;
-  display: inline-block;
-}
-
-.contact-action {
-  position: fixed;
-  bottom: 25px;
-  right: 15px;
-  width: 5em;
-  height: 5em;
-  cursor: pointer;
-}
-
-.back-action {
-  position: fixed;
-  top: 20px;
-  left: 15px;
-  width: 5em;
-  height: 5em;
-  cursor: pointer;
-}
-
-.contact-action .item,
-.back-action .item {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2em;
-  font-weight: bold;
-  border-radius: 50%;
-  transition: 0.5s;
-  color: white;
-  background: transparent;
-  box-shadow: 1px 1px 5px #000;
-}
-
-.back-action .item {
-  font-size: 2em;
-}
-
-@media (max-width: 800px) {
+  padding: 0;
+  box-sizing: border-box;
+ }
+ body {
+  font-family: cursive;
+ }
+ a {
+  text-decoration: none;
+ }
+ li {
+  list-style: none;
+ }
+ h1,h2,h3,h4{
+ color:#3f3d56;
+ }
  
-
-  .profile-wrapper {
-    flex-direction: column;
-  }
-
-  .back-action,
-  .contact-action {
-    width: 10em;
-    height: 10em;
-  }
-
-  .back-action .item {
-    font-size: 4em;
-  }
-
+ /*RESPONSIVE NAVBAR MENU STARTS*/
+ /* CHECKBOX HACK */
+ input[type=checkbox]{
+  display: none;
+ } 
+ /*HAMBURGER MENU*/
+ .hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
+ }
+ /* APPLYING MEDIA QUERIES */
+ @media (max-width: 768px) {
+ .menu {     content-visibility: hidden;
+  position: absolute;
+  background-color:#3f3d56;
+  right: 0;
+  left: 0;
+  text-align: center;
+  padding: 16px 0;
+ }
+ .menu li:hover {
+  display: inline-block;
+  transition: 0.3s ease;
+ }
+ .menu li + li {
+  margin-top: 12px;
+ }
+ input[type=checkbox]:checked ~ .menu{
+  display: block;
   
-
-  .profile-details {
-    font-size: 5vw;
-    min-height: 60vh;
-  }
-
-  div.profile-details > div > ul > li > div:nth-child(1),
-  div.profile-details > div > ul > li > div:nth-child(2) {
-    font-size: 5vw;
-  }
-
-  img#profile-picture {
-    max-height: 40vh;
-  }
-}
-
-
-
-/* end sec4 */
-
-/* FOOTER */
-.footer {
-	width: 100%;
-	background: #00121b;
-	display: block;
+  content-visibility: visible;
  }
-
- .inner-footer {
-	 width: 95%;
-	 margin: auto;
-	 padding: 30px 10px;
-	 display: flex;
-	 flex-wrap: wrap;
-	 box-sizing: border-box;
-	 justify-content: center;
+ .hamburger {
+  display: block;
  }
-
-.footer-items {
-	width: 25%;
-	padding: 10px 20px;
-	box-sizing: border-box;
-	color: #fff;
-}
-
-.footer-items p {
-	font-size: 16px;
-	text-align: justify;
-	line-height: 25px;
-	color: #fff;
-}
-
-.footer-items h1 {
-	color: #fff;
-}
-
-.border1 {
-	height: 3px;
-	width: 40px;
-	background: #ff9800;
-	color: #ff9800;
-	background-color: #ff9800;
-	border: 0px;
-}
-
-ul {
-	list-style: none;
-	color: #fff;
-	font-size: 15px;
-	letter-spacing: 0.5px;	
+ .dropdown {
+  left: 50%;
+  top: 30px;
+  transform: translateX(35%);
  }
-
-ul a {
-	text-decoration: none;
-	outline: none;
-	color: #fff;
-	transition: 0.3s;
-}
-
-ul a:hover {
-	color: #ff9800;
-}
-
-ul li {
-	margin: 10px 0;
-	height: 25px;
-}
-
-li i {
-	margin-right: 20px;
-}
-
-.social-media {
-	width: 100%;
-	color: #fff;
-	text-align: center;
-	font-size: 20px;
-}
-
-.social-media a {
-	text-decoration: none;
-}
-
-.social-media i {
-	height: 25px;
-	width: 25px;
-	margin: 20px 10px;
-	padding: 4px;
-	color: #fff;
-	transition: 0.5s;
-}
-
-.social-media i:hover {
-	transform: scale(1.5);
-}
-
-.footer-bottom {
-	padding: 10px;
-	background: #00121b;
-	color: #fff;
-	font-size: 12px;
-	text-align: center;
-}
-
-/* for tablet mode view */
-
-@media screen and (max-width: 1275px) {
-	.footer-items {
-		width: 50%;
-	}
-}
-
-/* for mobile screen view */
-
-@media screen and (max-width: 660px) {
-	.footer-items {
-		width: 100%;
-	}
-}
-
-/* END FOOTER */
+ .dropdown li:hover {
+  background-color: #4c9e9e;
+ }
+ }
+ 
+ /* end  */
+ /* NAVBAR STYLING STARTS */
+ .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #3f3d56;
+  color: #fff;
+ }
+ .nav-links a {
+  color: #fff;
+ }
+ /* LOGO */
+ .logo {
+  font-size: 32px;
+ }
+ /* NAVBAR MENU */
+ .menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+ }
+ 
+ .menu li:hover {
+  /* background-color: #fbba52; */
+  border-radius: 5px;
+  transition: 0.3s ease;
+ }
+ 
+ .menu li {
+  padding: 5px 14px;
+ }
+ 
+ .services {
+  position: relative; 
+ }
+ .dropdown {
+  background-color: rgb(1, 139, 139);
+  padding: 1em 0;
+  position: absolute; /*WITH RESPECT TO PARENT*/
+  display: none;
+  border-radius: 8px;
+  top: 35px;
+ }
+ .dropdown li + li {
+  margin-top: 10px;
+ }
+ .dropdown li {
+  padding: 0.5em 1em;
+  width: 8em;
+  text-align: center;
+ }
+ .dropdown li:hover {
+  background-color: #4c9e9e;
+ }
+ .services:hover .dropdown {
+  display: block;
+ }
+ 
+ /* sec1 */
+ .mtimage{
+   width:500px;
+   height:500px;
+  
+ }
+ .col-7{
+   
+   align-self: center;
+ 
+ }
+ .col-5{
+   position:relative;
+ 
+ }
+ .nameinfo{
+  text-align: center;
+   padding: 25px 10px;
+   border-radius: 5px;
+   font-size: 14px;
+   cursor: pointer;
+   background: transparent;
+   transition: transform 0.5s, background 0.5s;}
+ .job{
+ background-color:#F9A826;
+ padding:12px;
+ }
+ /* end sec1 */
+ 
+ /* sec2 */
+ 
+ .container {
+   width: 100%;
+   height: 100%;
+   padding: 0px 8%;
+ }
+ 
+ .container h1 {
+   text-align: center;
+   padding-top: 10%;
+   margin-bottom: 60px;
+   font-weight: 600;
+   position: relative;
+ }
+ 
+ .container h1::after {
+   content: '';
+   background: #f9a826;
+   width: 100px;
+   height: 5px;
+   position: absolute;
+   bottom: -5px;
+   left: 50%;
+   transform: translateX(-50%);
+ }
+ 
+ .row {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   grid-gap: 30px;
+ }
+ 
+ .service {
+   text-align: center;
+   padding: 25px 10px;
+   border-radius: 5px;
+   font-size: 14px;
+   cursor: pointer;
+   background: transparent;
+   transition: transform 0.5s, background 0.5s;
+ }
+ 
+ .service img {
+   font-size: 40px;
+   width:100px;
+   height:100px;
+   margin-bottom: 10px;
+   color: #303ef7;
+ }
+ 
+ .service h2 {
+   font-weight: 600;
+   margin-bottom: 8px;
+ }
+ 
+ .service:hover {
+   background: #f9c26a;
+   color: #fff;
+   transform: scale(1.05);
+ }
+ 
+ .service:hover img {
+   color: #fff;
+ }
+ 
+ /* end sec2 */
+ 
+ 
+ /* sec3 */
+ 
+ .about-section{
+   background: #f1f1f1;
+ }
+ 
+ .inner-width{
+   max-width: 1000px;
+   overflow: hidden;
+   padding: 0 20px;
+   /*margin: auto;*/
+ }
+ 
+ .about-section h1{
+   text-align: center;
+ }
+ 
+ .border{
+   width: 100px;
+   height: 3px;
+   background: #e74c3c;
+   margin: 40px auto;
+ }
+ 
+ .about-section-row {
+   display: flex;
+   flex-wrap: wrap;
+ }
+ 
+ .about-section-col {
+   flex: 50%;
+ }
+ 
+ .about{
+ padding-right: 30px;
+ }
+ 
+ .about p {
+   text-align: justify;
+   padding-bottom: 20px;
+ }
+ 
+ .about a{
+   display: inline-block;
+   color: #e72c3c;
+   text-decoration: none;
+   border: 2px solid #e72c3c;
+   border-radius: 24px;
+   padding: 8px 40px;
+   transition: 0.4s linear;
+ }
+ 
+ .about a:hover {
+   color: #fff;
+   background: #e72c3c;
+ }
+ 
+ .skills{
+   padding-left: 30px;
+ }
+ 
+ .skill{
+   margin-bottom: 10px;
+ }
+ 
+ .progress{
+   width: 100%;
+   background: #ddd;
+   border-radius: 12px;
+ }
+ 
+ .progress-bar {
+   height: 12px;
+   background: #f9a826;
+   border-radius: 12px;
+ }
+ 
+ .progress-bar span{
+   float: right;
+   margin-right: 6px;
+   line-height: 13px;
+   color: #fff;
+   font-size: 12px;
+ }
+ 
+ .p1{
+  width: 80%;
+ }
+ 
+ .p2{
+  width: 60%;
+ }
+ 
+ .p3{
+   width: 30%;
+ }
+ 
+ @media screen and (max-width: 700px){
+   .about-section-col{
+     flex: 100%;
+     margin: 10px 0;
+   }
+   .about, .skills {
+     padding: 0;
+   }
+   .about{
+     text-align: center;
+   }
+ }
+ /* end sec3 */
+ 
+ 
+ /* sec4 */
+ 
+ .profile-picture,
+ .profile-details {
+   flex: 1;
+   font-size: 16px;
+   font-size: 2.5vw;
+ 
+ }
+ .profile-picture{
+   
+   text-align-last: center;
+ }
+ .profile-wrapper {
+   color: white;
+   display: flex;
+ }
+ 
+ img#profile-picture {
+   width: 500px;
+   object-fit: contain;
+ }
+ 
+ div.profile-details > div {
+   padding: 0em 1em 1em 1em;
+   
+ }
+ 
+ div.profile-details > div > ul {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+ }
+ 
+ div.profile-details > div > ul li {
+   margin: 8px 0;
+   display: block;
+ }
+ 
+ div.profile-details > div > ul > li > div:nth-child(1) {
+   font-weight: 600;
+   font-size: 16px;
+   font-size: 2vw;
+   width: 30%;
+   display: inline-block;
+ }
+ 
+ div.profile-details > div > ul > li > div:nth-child(2) {
+   font-size: 16px;
+   font-size: 2vw;
+   text-align: left;
+   width: 68%;
+   display: inline-block;
+ }
+ 
+ .contact-action {
+   position: fixed;
+   bottom: 25px;
+   right: 15px;
+   width: 5em;
+   height: 5em;
+   cursor: pointer;
+ }
+ 
+ .back-action {
+   position: fixed;
+   top: 20px;
+   left: 15px;
+   width: 5em;
+   height: 5em;
+   cursor: pointer;
+ }
+ 
+ .contact-action .item,
+ .back-action .item {
+   width: 100%;
+   height: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 2em;
+   font-weight: bold;
+   border-radius: 50%;
+   transition: 0.5s;
+   color: white;
+   background: transparent;
+   box-shadow: 1px 1px 5px #000;
+ }
+ 
+ .back-action .item {
+   font-size: 2em;
+ }
+ 
+ @media (max-width: 800px) {
+  
+ 
+   .profile-wrapper {
+     flex-direction: column;
+   }
+ 
+   .back-action,
+   .contact-action {
+     width: 10em;
+     height: 10em;
+   }
+ 
+   .back-action .item {
+     font-size: 4em;
+   }
+ 
+   
+ 
+   .profile-details {
+     font-size: 5vw;
+     min-height: 60vh;
+   }
+ 
+   div.profile-details > div > ul > li > div:nth-child(1),
+   div.profile-details > div > ul > li > div:nth-child(2) {
+     font-size: 5vw;
+   }
+ 
+   img#profile-picture {
+     max-height: 40vh;
+   }
+ }
+ 
+ /*contact form*/
+ 
+          .form{
+              padding: 30px 40px;
+          }
+          
+          .form-control{
+              margin-bottom: 10px;
+              padding-bottom: 20px;
+              position: relative;
+          }
+          
+          .form-control label{
+              color:#777;
+              display: block;
+              margin-bottom: 5px; 
+        font-size:20px;
+          }
+           
+          .form-control input
+          {
+              border: 2px solid #f0f0f0;
+              border-radius: 4px;
+              display: block;
+              width: 100%;
+              padding: 10px;
+              font-size: 14px;   
+          }
+          
+          .form-control input:focus{
+              outline: 0;
+              border-color: #777;
+          
+          }
+          
+          .form-control.success input {
+              border-color: var(--succes-color);
+          }
+          
+          .form-control.error input {
+              border-color: var(--error-color);    
+          }
+          
+          .form-control small{
+              
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              visibility: hidden;
+          }
+          
+          .form-control.error small{
+              visibility: visible;
+          }
+          .form button {
+              cursor: pointer;
+     background-color: #f9a826;
+     border: 0px solid #f9a826;
+     border-radius: 4px;
+     color: #fff;
+     display: block;
+     padding: 10px;
+     font-size: 16px;
+     margin-top: 20px;
+     width: 100%;
+          }
+      form h6{
+      
+          color: #3f3d56;
+      }
+      .formdesgin{
+          background-color: #fff;
+     border-radius: 5px;
+     box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+ /*end contact*/
+ 
+ small{
+     font-size: 12px;
+     color: #f9a826;
+   }
+ 
+ /* end sec4 */
+ 
+ /* FOOTER */
+ .footer {
+   width: 100%;
+   background: #3f3d56;
+   display: block;
+  }
+ 
+  .inner-footer {
+    width: 95%;
+    margin: auto;
+    padding: 30px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    justify-content: center;
+  }
+ 
+ .footer-items {
+   width: 25%;
+   padding: 10px 20px;
+   box-sizing: border-box;
+   color: #fff;
+ }
+ 
+ .footer-items p {
+   font-size: 16px;
+   text-align: justify;
+   line-height: 25px;
+   color: #fff;
+ }
+ 
+ .footer-items h1 {
+   color: #fff;
+ }
+ .footer-items h3{
+   color: #fff;
+ }
+ 
+ .border1 {
+   height: 3px;
+   width: 40px;
+   background: #ff9800;
+   color: #ff9800;
+   background-color: #ff9800;
+   border: 0px;
+ }
+ 
+ ul {
+   list-style: none;
+   color: #fff;
+   font-size: 15px;
+   letter-spacing: 0.5px;	
+  }
+ 
+ ul a {
+   text-decoration: none;
+   outline: none;
+   color: #fff;
+   transition: 0.3s;
+ }
+ 
+ ul a:hover {
+   color: #ff9800;
+ }
+ 
+ ul li {
+   margin: 10px 0;
+   height: 25px;
+ }
+ 
+ li i {
+   margin-right: 20px;
+ }
+ 
+ .social-media {
+   width: 100%;
+   color: #fff;
+   text-align: center;
+   font-size: 20px;
+ }
+ 
+ .social-media a {
+   text-decoration: none;
+ }
+ 
+ .social-media i {
+   height: 25px;
+   width: 25px;
+   margin: 20px 10px;
+   padding: 4px;
+   color: #fff;
+   transition: 0.5s;
+ }
+ 
+ .social-media i:hover {
+   transform: scale(1.5);
+ }
+ 
+ .footer-bottom {
+   padding: 10px;
+   background: #3f3d56;
+   color: #fff;
+   font-size: 12px;
+   text-align: center;
+ }
+ 
+ /* for tablet mode view */
+ 
+ @media screen and (max-width: 1275px) {
+   .footer-items {
+     width: 50%;
+   }
+ }
+ 
+ /* for mobile screen view */
+ 
+ @media screen and (max-width: 660px) {
+   .footer-items {
+     width: 100%;
+   }
+ }
+ 
+ /* END FOOTER */
