--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@
   display: flex;
   gap: 1em;
   font-size: 18px;
+  
+  z-index: 99;
  }
  
  .menu li:hover {
@@ -565,7 +567,94 @@ padding-right: 30px;
    }
  
  /* end sec4 */
- 
+ /* sec5 */
+ .makeflex{
+   display:flex;
+   gap: 10px;
+ }
+ .modal-target {
+  width: 300px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.modal-target:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  opacity: 1 !important;
+  max-width: 1200px;
+}
+
+/* Caption of Modal Image */
+.modal-caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 1200px;
+  text-align: center;
+  color: white;
+  font-weight: 700;
+  font-size: 1em;
+  margin-top: 32px;
+}
+
+/* Add Animation */
+.modal-content, .modal-caption {  
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-atransform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.modal-close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ /* end sec 5 */
  /* FOOTER */
  .footer {
    width: 100%;
@@ -686,6 +775,72 @@ padding-right: 30px;
    .footer-items {
      width: 100%;
    }
+   .makeflex{
+    display:block;
+    gap: 10px;
+  }
  }
  
  /* END FOOTER */
+
+
+ /* dark mode */
+ h1, h2, h3, h4, h5, h6{
+  color: #3f3d56;
+  } 
+  .centering{
+    
+   text-align: -webkit-center;
+  }
+ button{
+  cursor: pointer;
+  border: 0px  ;
+  text-align: center;
+  padding: 5px;
+  margin-left: 8px;
+  background-color:none;
+  
+}
+.dark{
+  background-color: #222;
+
+}
+.dark h1{
+color: #e6e6e6;
+}
+.dark h2{
+  color: #e6e6e6;
+  }
+  .dark h3{
+    color: #e6e6e6;
+    }
+    .dark h4{
+      color: #e6e6e6;
+      }
+      .dark p{
+        color: #e6e6e6;
+        }
+        .dark div{
+          color: #e6e6e6;
+          }
+.dark .about-section{
+background: #222;
+}
+.dark .navbar{
+
+background-color: #525252;
+}
+.dark .footer {
+
+background-color: #525252;
+}
+.dark .menu{
+
+background-color: #525252;
+z-index: 99;
+}
+.dark .footer-bottom{
+  
+background-color: #222;
+}
+/* end dark mode */
